# rust-client

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: client.rs  lib.rs  primitives.rs
tests/: mod.rs
