[package]
name = "nimiq_rpc"
version = "0.2.0"
authors = ["Stefan Koolen"]
edition = "2021"
description = "Nimiq RPC client for Rust"
repository = "https://github.com/nimiq-community/rust-client"
readme = "README.md"
keywords = ["nimiq", "rpc", "json", "blockchain", "cryptocurrency"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.21"
jsonrpsee = { version = "0.20", features = ["client-core"] }
jsonrpsee-http-client = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"

[dev-dependencies]
tokio = { version = "1.29", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"
